--- a/10_seedling/30_late/10_when_to_control_stretch_in_seedling/en.yml
+++ b/10_seedling/30_late/10_when_to_control_stretch_in_seedling/en.yml
@@ -10,7 +10,7 @@ intro:
     layout: left
   text: |
     In seedling stage measure the stem's height and check the cotyledons' growth (first set of round leaves)
-    The sprout stretches until it receives enough litght; then starts working on it's first set of true leaves.
+    The sprout stretches until it receives enough light; then starts working on it's first set of true leaves.
 
 reminders:
   - id: watering
