--- a/20_veg/30_late/10_when_to_top/en.yml
+++ b/20_veg/30_late/10_when_to_top/en.yml
@@ -20,7 +20,7 @@ products:
         image: trimming_shears.png
         url: https://amzn.to/2ITakGS
 
-  - name: Trimming shears
+  - name: Pruning shears
     urls:
       - zone: DE
         image: prunning_shears.png
