--- a/30_bloom/10_early/10_how_to_switch_to_bloom/en.yml
+++ b/30_bloom/10_early/10_how_to_switch_to_bloom/en.yml
@@ -9,8 +9,8 @@ intro:
     url: how_to_switch_to_bloom.png
     layout: left
   text: |
+    12 hours of uninterupted darkness is what will start the flowering process.
     With the press of a button on the SuperGreenLab app, the controller switches the vegetative 18/6 light cycle to the flowering 12/12.
-    Congratulations: Flowering day 0!
 
 triggers:
   - id: TEMPERATURE
