--- a/10_seedling/10_early/20_how_to_germinate_your_seed/en.yml
+++ b/10_seedling/10_early/20_how_to_germinate_your_seed/en.yml
@@ -38,9 +38,9 @@ sections:
     text: |
       Seeds are made to survive through winter and sprout when 3 conditions are met:
 
-      * Water: activates the seed’s growth hormones while making the shell easier to break through.
+      * Water: activates the seed's growth hormones while making the shell easier to break through.
       * Temperature: signals the plant it is safe to sprout, winter is over.
-      * Oxygen: determines how deep the seed is, low oxygen would mean it’s too deep and won’t be able to reach the surface.
+      * Oxygen: determines how deep the seed is, low oxygen would mean it's too deep and won't be able to reach the surface.
 
 sources:
   - title: Royal Queen Seeds
