when_to_water.mp4

--- a/10_seedling/20_mid/10_when_to_water_seedling/en.yml
+++ b/10_seedling/20_mid/10_when_to_water_seedling/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 4-5
 intro:
   image:
-    url: when_to_water.gif
+    url: when_to_water.mp4
     layout: left
   text: |
     It's going to take a few days for the soil to dry, checking every 2 days is a good frequency.
