when_does_flowering_start name change

--- a/30_bloom/10_early/15_when_does_flowering_start/en.yml
+++ b/30_bloom/10_early/15_when_does_flowering_start/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 35-42
 intro:
   image:
-    url: how_to_switch_to_bloom.png
+    url: when_does_flowering_start.png
     layout: left
   text: |
     Once the light cycle is in 12/12 it will take a couple of days for your plant to transition between veg and bloom.
